Fix grid items taking up extra space

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .container {
   display: grid;
-  grid-template: repeat(2, 1fr) / 1fr 3fr;
+  grid-template-columns:  1fr 3fr;
 }
 
 .header {
